Update styling for various links and list formatting

--- a/_posts/2020-08-30-test.md
+++ b/_posts/2020-08-30-test.md
@@ -1,5 +1,5 @@
 ---
-title: test
+title: My Deepest Darkest Secret
 ---
-# Hello
-## woah a blog post
+# I don't care that you broke your elbow
+## there I said it.
